[package]
name = "keymapperd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Cross-platform key-remapping daemon for macOS, Linux, and Windows"
readme = "README.md"
homepage = "https://github.com/mamrhein/keymapperd"
repository = "https://github.com/mamrhein/keymapperd"
license-file = "LICENSE.TXT"
keywords = ["Cross-platform", "keymapper", "macOS", "Linux", "Windows"]
categories = ["utilities"]

[dependencies]
active-win-pos-rs = "0.11" # active window tracking
dirs = "6" # platform config directory resolution
indexmap = { version = "2", features = ["serde"] }
notify = "8" # cross-platform file watching
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"


# Linux-specific kernel input bindings
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
libc = "0.2"
uinput = "0.1"

# Modern macOS framework bindings (Corrected)
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
objc2-core-graphics = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }

# Windows-specific system bindings
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
] }
