[package]
name = "keymapperd"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Cross-platform key-remapping daemon for macOS, Linux, and Windows"
readme = "README.md"
homepage = "https://github.com/mamrhein/keymapperd"
repository = "https://github.com/mamrhein/keymapperd"
license-file = "LICENSE.TXT"
keywords = ["Cross-platform", "keymapper", "macOS", "Linux", "Windows"]
categories = ["utilities"]

[[bin]]
name = "keymapper"
path = "src/bin/keymapper.rs"

[dependencies]
active-win-pos-rs = "0.11" # active window tracking
dirs = "6" # platform config directory resolution
indexmap = { version = "2", features = ["serde"] }
notify = "8" # cross-platform file watching
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"]}
fs-err = "3"


# Linux-specific kernel input bindings
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
libc = "0.2"
udevrs = "0.5"
uinput = "0.1"
xcb = "1.7" # window enumeration for `keymapper appnames`

# macOS framework bindings
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
objc2-core-graphics = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }
core-graphics = "0.23" # window enumeration for `keymapper appnames`
core-foundation = "0.9" # CFDictionary parsing for `keymapper appnames`
core-foundation-sys = "0.8" # raw CFArray/CFNumber FFI for `keymapper appnames`

# Windows-specific system bindings
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }
